14th Assignment Work start with jQuery

--- a/assets/css/14.css
+++ b/assets/css/14.css
@@ -1,11 +1,21 @@
 .box {
-    width: 200px;
+    width: 400px;
     height: 100px;
     margin: 10px;
     padding: 10px;
     border: 1px solid #000;
+    color: antiquewhite;
     display: none;
 }
-#box1 { background-color: lightblue; }
-#box2 { background-color: lightgreen; }
-#box3 { background-color: lightcoral; }
+
+#box1 {
+    background-color: rgb(102, 0, 0);
+}
+
+#box2 {
+    background-color: rgb(0, 70, 0);
+}
+
+#box3 {
+    background-color: rgb(0, 0, 78);
+}
