--- a/assets/css/16.css
+++ b/assets/css/16.css
@@ -96,8 +96,6 @@ img {
 
 
 .prev-button, .next-button {
-
-
     background: linear-gradient(45deg, #0f1cf6, #040c9e);
     border: none;
     color: #fff;
@@ -109,6 +107,7 @@ img {
     font-weight: bold;
     text-transform: uppercase;
 
+
     position: absolute;
     top: 50%;
     z-index: 1;
@@ -118,4 +117,31 @@ img {
     background: #fff;
     color: #000;
     border: 2px solid #000;
-} */
+    cursor: pointer;
+
+}
+
+/*Working for dots*/
+ul.slick-dots button {
+    display: none;
+}
+
+ul.slick-dots li{
+    height: 10px;
+    width: 10px;
+    background-color: blue;
+    border-radius: 50px;
+    margin: 10px;
+    cursor: pointer;
+}
+
+ul.slick-dots{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+ul.slick-dots li.slick-active{
+    background-color: red;
+}
