--- a/assets/css/16.css
+++ b/assets/css/16.css
@@ -126,7 +126,7 @@ ul.slick-dots button {
     display: none;
 }
 
-ul.slick-dots li{
+ul.slick-dots li {
     height: 10px;
     width: 10px;
     background-color: blue;
@@ -135,13 +135,21 @@ ul.slick-dots li{
     cursor: pointer;
 }
 
-ul.slick-dots{
+ul.slick-dots {
     list-style: none;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-ul.slick-dots li.slick-active{
+ul.slick-dots li.slick-active {
     background-color: red;
+}
+
+.logo-carousel ul.slick-dots li {
+    background-color: rgb(0, 109, 0);
+}
+
+.logo-carousel ul.slick-dots li.slick-active {
+    background-color: rgb(121, 0, 0);
 }
